# mq-jobcontrol

./: CHANGELOG.md  README.md  config.json  mq-jobcontrol.cabal
app/: Jobcontrol.hs
docker/: Dockerfile
msgs/: example.msg
src/System/MQ/: Jobcontrol.hs
test/: bank.json  calculator.json  cutpointer.json  example.json
