name:                mq-jobcontrol
version:             0.1.0.2
synopsis:            Jobcontrol component for Monique
description:         Jobcontrol component for Monique
homepage:            https://github.com/biocad/mq-jobcontrol
license:             BSD3
license-file:        LICENSE
author:              Bogdan Neterebskii, Vladimir Morozov, Alexander Sadovnikov
maintainer:          neterebskiy@biocad.ru
copyright:           (c) 2018, BIOCAD
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.MQ.Jobcontrol
  other-modules:       
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , directory
                     , mq
                     , mq-component-hs
                     , mtl
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

executable mq-jobcontrol
  hs-source-dirs:      app
  main-is:             Jobcontrol.hs
  build-depends:       base
                     , mq-component-hs
                     , mq-jobcontrol
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2

source-repository head
  type:     git
  location: https://github.com/biocad/mq-jobcontrol
